--- a/praktikum02/index.html
+++ b/praktikum02/index.html
@@ -1,20 +1,154 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Praktikum 02</title>
-    </head>
-    <body style="background-color: aqua;" >
-        <h1>Hello World </h1> 
-        <h2>Biodata Saya</h2>
-    <ul>
-        <li>Nama = Ammar Mubarok Robbani</li>
-        <li>Kelas = TI-01  </li>
-        <li>Jurusan = Teknik Informatika</li>
-        <li>Domisili = Bogor</li>
-    </ul>
-        <h3>Tentang Saya</h3>
-        <p>Pernah bersekolah di TK Nur Ar-Rahman Cimahi,lalu melanjutkan Ke SDN Pambudi Dharma</p>
-         <p> lalu pidah ke Bogor dan bersekolah di SMPN 17 Bogor dan melanjutkan ke SMK Bina Informatika Bogor 
-        </p>
-    </body>
+	<head>
+		<title>MarTravel</title>
+        <style type="text/css">
+header, section, footer, aside, nav, article, figure, figcaption {
+	display: block;}
+body {
+	color: #666666;
+	background-color: #f9f8f6;
+	background-image: url("images/dark-wood.jpg");
+	background-position: center;
+	font-family: Georgia, Times, serif;
+	line-height: 1.4em;
+	margin: 0px;}
+.wrapper {
+	width: 940px;
+	margin: 20px auto 20px auto;
+	border: 5px solid #000000;
+	background-color: #ffffff;}
+header {
+	height: 160px;
+	background-image: url(images/header.png);}
+h1 {
+	text-indent: -9999px;
+	width: 940px;
+	height: 130px;
+	margin: 0px;}
+nav, footer {
+	clear: both;
+	color: #ffffff;
+	background-color: #aeaca8;
+	height: 30px;}
+nav ul {
+	margin: 0px;
+	padding: 5px 0px 5px 30px;}
+nav li {
+	display: inline;
+	margin-right: 40px;}
+nav li a {
+	color: #ffffff;}
+nav li a:hover, nav li a.current {
+	color: #000000;}
+section.courses {
+	float: left;
+	width: 659px;
+	border-right: 1px solid #eeeeee;}
+article {
+	clear: both;
+	overflow: auto;
+	width: 100%;}
+hgroup {
+	margin-top: 40px;}
+figure {
+	float: left;
+	width: 290px;
+	height: 220px;
+	padding: 5px;
+	margin: 20px;
+	border: 1px solid #eeeeee;}
+figcaption {
+	font-size: 90%;
+	text-align: left;}
+aside {
+	width: 230px;
+	float: left;
+	padding: 0px 0px 0px 20px;}
+aside section a {
+	display: block;
+	padding: 10px;
+	border-bottom: 1px solid #eeeeee;}
+aside section a:hover {
+	color: #985d6a;
+	background-color: #efefef;}
+a {
+	color: #de6581;
+	text-decoration: none;}
+h1, h2, h3 {
+	font-weight: normal;}
+h2 {
+	margin: 10px 0px 5px 0px;
+	padding: 0px;}
+h3 {
+	margin: 0px 0px 10px 0px;
+	color: #de6581;}
+aside h2 {
+	padding: 30px 0px 10px 0px;
+	color: #de6581;}
+footer {
+	font-size: 80%;
+	padding: 7px 0px 0px 20px;}
+		</style>
+	</head>
+	<body>
+		<div class="wrapper">
+            <header>
+                <img src="logo.jpeg" alt="image"style="width:200px;height300px">
+                <h2>Travel Umroh Plus Tour City</h2>
+                <nav>
+                    <ul>
+                    <li><a href="umroh.html" class"current">Home</a></li>
+                    <li><a href="profil.html">Profil</a></li>
+                    <li><a href="paket.html">Paket</a></li>
+                   </ul>
+                  </nav>
+                </header>
+                <section class="courses">
+                    <article>
+                        <figure>
+                            <img src="umrah.jpg">
+                            <figcaption>Umroh</figcaption>
+                        </figure>
+                        <hgroup>
+                            <h2>Paket Umroh</h2>
+                        </hgroup>
+                        <p>Paket Umroh mulai dari Rp.20 Jt- Rp.22 Jt.</p>
+                        <p>Memulai ibadah dengan paket-paket yang telah kami tawarkan untuk anda
+                           mulai dari Reguler 1 - Reguler 3 demi kenyamanan anda beribadah.  
+                        </p>
+                    </article>
+                    <article>
+                        <figure>
+                            <img src="turki.jpg">
+                            <figcaption>Umroh Plus Turki</figcaption>
+                        </figure>
+                        <hgroup>
+                            <h2>Umroh Plus Turki</h2>
+                        </hgroup>
+                        <p>Paket Umroh plus Turki mulai dari Rp.29 Jt- Rp.32 Jt.</p>
+                        <p>Memulai ibadah dengan paket-paket yang telah kami tawarkan untuk anda
+                           serta mendapatkan destinasi wisata ke Turki dengan paket-paket yang telah kami 
+                           sediakan untuk anda.</p>
+                    </article>
+                    </section>
+                    <aside>
+                        <section class="popular-recipes">
+                         <h2>Masakan Populer</h2>
+                           <a href="">Sayur Sop</a>
+                           <a href="">Sayur Asem</a>
+                           <a href="">Sayur Lodeh</a>
+                           <a href="">Sayur Bayam</a>
+                        </section>
+                        <section class="contact-details">
+                         <h2>Kontak</h2>
+                          <p>Warung Tegal<br />
+                          di seluruh indonesia
+                        </section>
+                      </aside>
+                      <footer>
+                        &copy; 2015 Warung Tegal
+                    </footer>
+        </div>
+	</body>
 </html>
